...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/activity_login_et_pass_phrase"
        android:labelFor="@+id/fragment_login_et_passphrase"
        app:errorEnabled="true"
        app:hintEnabled="true"
        app:passwordToggleEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">
...
            android:layout_height="wrap_content"
            android:imeOptions="actionSend"
            android:maxLines="4" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/fragment_login_btn_enter"
        style="@style/AdamantLight.ButtonActive"
        android:layout_width="@dimen/main_button_width"
        android:layout_height="@dimen/main_button_height"
        android:text="@string/activity_login_btn_enter_in_net"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
...
