...
                app:dsv_orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/activity_login_btn_login"
                style="@style/AdamantLight.ButtonActive"
                android:layout_width="@dimen/main_button_width"
                android:layout_height="@dimen/main_button_height"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
...
